@@ -246,10 +246,12 @@ class MemoryReader(base.ProtoReader):
 
     A trajectory reader interface to a numpy array of the coordinates.
     For compatibility with the timeseries interface, support is provided for
-    specifying the order of columns through the format option.
+    specifying the order of columns through the `order` keyword.
 
     .. versionadded:: 0.16.0
-
+    .. versionchanged:: 1.0.0
+       Support for the deprecated `format` keyword for
+       :meth:`MemoryReader.timeseries` has now been removed.
     """
 
     format = 'MEMORY'
@@ -488,10 +490,10 @@ class MemoryReader(base.ProtoReader):
         self.ts.frame = -1
         self.ts.time = -1
 
-    def timeseries(self, asel=None, start=0, stop=-1, step=1, order='afc', format=None):
+    def timeseries(self, asel=None, start=0, stop=-1, step=1, order='afc'):
         """Return a subset of coordinate data for an AtomGroup in desired
-        column order/format. If no selection is given, it will return a view of
-        the underlying array, while a copy is returned otherwise.
+        column order. If no selection is given, it will return a view of the
+        underlying array, while a copy is returned otherwise.
 
         Parameters
         ---------
@@ -510,26 +512,11 @@ class MemoryReader(base.ProtoReader):
             of 'a', 'f', 'c' are allowed ie "fac" - return array
             where the shape is (frame, number of atoms,
             coordinates).
-        format : str (optional)
-            deprecated, equivalent to `order`
-
-        Note
-        ----
-        The `format` parameter name is used to mimic the
-        :class:`MDAnalysis.coordinates.DCD.timeseries` interface. It is
-        identical to the `order` parameter for :class:`MemoryReader`. In a
-        future version, `format` will be renamed to `order`.
 
 
-        .. deprecated:: 0.17.0
-           `format` has been deprecated in favor of the standard keyword `order`.
+        .. versionchanged:: 1.0.0
+           Deprecated `format` keyword has been removed. Use `order` instead.
         """
-        if format is not None:
-            warnings.warn(
-                "'format' is deprecated and will be removed in 1.0. Use 'order' instead",
-                category=DeprecationWarning)
-            order = format
-
         array = self.get_array()
         if order == self.stored_order:
             pass
