@@ -86,6 +86,8 @@ Enhancements
   * Improve the distance search in water bridge analysis with capped_distance (PR #2480)
 
 Changes
+  * Removed `format` keyword from :meth:`MemoryReader.timeseries` (Issue #1453,
+    #2443)
   * Deprecated :class:`LAMMPSDataConverter` has now been removed (Issue #2564)
   * Removed AtomGroup stubs (PR #1070, Issue #2443).
   * encore.hes() doesn't accept the details keyword anymore, it always returns
